--- a/docker/Dockerfile-nonroot
+++ b/docker/Dockerfile-nonroot
@@ -1,7 +1,7 @@
 FROM ubuntu:16.04
 
 RUN apt-get -q update \
-    && apt-get -qy install wget apt-transport-https vim git supervisor postgresql postgresql-plpython-9.5 libfontconfig python3-pip libssl-dev \
+    && apt-get -qy install wget apt-transport-https vim git supervisor postgresql postgresql-plpython-9.5 libfontconfig python3-pip libssl-dev libpq-dev \
     && pip3 install -U pip \
     && locale-gen "en_US.UTF-8" && apt autoremove -y \
     && mkdir -p /var/log/supervisor /pgwatch2 \
