Metrics for Config DB added

--- a/pgwatch2/metrics/preset-configs.yaml
+++ b/pgwatch2/metrics/preset-configs.yaml
@@ -124,3 +124,28 @@
     table_stats: 1
     wal: 1
     wal_receiver: 1
+
+- name: superuser_no_python
+  description: like exhaustive, but no PL/Python helpers
+  metrics:
+    archiver: 60
+    backends: 60
+    bgwriter: 60
+    change_events: 300
+    db_stats: 60
+    db_size: 300
+    index_stats: 900
+    locks: 60
+    locks_mode: 60
+    replication: 120
+    replication_slots: 120
+    settings: 7200
+    sproc_stats: 180
+    stat_statements: 180
+    stat_statements_calls: 60
+    table_bloat_approx_summary_sql: 7200
+    table_io_stats: 600
+    table_stats: 300
+    wal: 60
+    wal_size: 300
+    wal_receiver: 120
